notifications and python classification integration